terraform/5-routes.tf
resource "aws_route_table" "private-routes" {
  vpc_id = aws_vpc.digitalhippo-vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-gateway.id
  }
}

resource "aws_route_table" "public-routes" {
  vpc_id = aws_vpc.digitalhippo-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "private-association-ca-central-1a" {
  subnet_id      = aws_subnet.private-subnet-ca-central-1a.id
  route_table_id = aws_route_table.private-routes.id
}

resource "aws_route_table_association" "private-association-ca-central-1b" {
  subnet_id      = aws_subnet.private-subnet-ca-central-1b.id
  route_table_id = aws_route_table.private-routes.id
}

resource "aws_route_table_association" "public-association-ca-central-1a" {
  subnet_id      = aws_subnet.public-subnet-ca-central-1a.id
  route_table_id = aws_route_table.public-routes.id
}

resource "aws_route_table_association" "public-association-ca-central-1b" {
  subnet_id      = aws_subnet.public-subnet-ca-central-1b.id
  route_table_id = aws_route_table.public-routes.id
}
